--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,25 +1,23 @@
 ---
 import { Icon } from 'astro-icon/components'
-import DisplaySettings from './widget/DisplaySettings.svelte'
-import { LinkPreset, type NavBarLink } from '../types/config'
 import { navBarConfig, siteConfig } from '../config'
-import NavMenuPanel from './widget/NavMenuPanel.astro'
-import Search from './Search.svelte'
 import { LinkPresets } from '../constants/link-presets'
-import LightDarkSwitch from './LightDarkSwitch.svelte'
+import { LinkPreset, type NavBarLink } from '../types/config'
 import { url } from '../utils/url-utils'
+import LightDarkSwitch from './LightDarkSwitch.svelte'
+import Search from './Search.svelte'
+import DisplaySettings from './widget/DisplaySettings.svelte'
+import NavMenuPanel from './widget/NavMenuPanel.astro'
 const className = Astro.props.class
 
-let links: NavBarLink[] = navBarConfig.links.map(
-  (item: NavBarLink | LinkPreset): NavBarLink => {
-    if (typeof item === 'number') {
-      return LinkPresets[item]
-    }
-    return item
-  },
-)
+const links: NavBarLink[] = navBarConfig.links.map(item => {
+  if (typeof item === 'number') {
+    return LinkPresets[item]
+  }
+  return item
+})
 ---
-<div id="navbar" class="z-50 onload-animation">
+<div id="navbar" class="z-50 onload-animation fixed top-0 left-0 right-0">
     <div class="absolute h-8 left-0 right-0 -top-8 bg-[var(--card-bg)] transition"></div> <!-- used for onload animation -->
     <div class:list={[
         className,
